--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/core": "~4.11.0",
+    "@ionic-native/file": "^4.12.2",
+    "@ionic-native/file-transfer": "^4.12.2",
     "@ionic-native/header-color": "^4.12.0",
     "@ionic-native/navigation-bar": "^4.12.0",
     "@ionic-native/splash-screen": "~4.11.0",
@@ -28,6 +30,8 @@
     "@ionic/storage": "^2.1.3",
     "cordova-android": "7.0.0",
     "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-file": "^6.0.1",
+    "cordova-plugin-file-transfer": "^1.7.1",
     "cordova-plugin-headercolor": "^1.0.0",
     "cordova-plugin-ionic-keyboard": "^2.1.2",
     "cordova-plugin-ionic-webview": "^2.1.0",
@@ -38,6 +42,7 @@
     "cordova-sqlite-storage": "^2.4.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "papaparse": "^4.6.0",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
@@ -57,7 +62,9 @@
       "cordova-sqlite-storage": {},
       "cordova-plugin-navigationbar": {},
       "cordova-plugin-statusbar": {},
-      "cordova-plugin-headercolor": {}
+      "cordova-plugin-headercolor": {},
+      "cordova-plugin-file": {},
+      "cordova-plugin-file-transfer": {}
     },
     "platforms": [
       "android"
