--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/core": "~4.11.0",
-    "@ionic-native/file": "^4.12.2",
+    "@ionic-native/file": "^4.14.0",
     "@ionic-native/file-transfer": "^4.12.2",
     "@ionic-native/header-color": "^4.12.0",
     "@ionic-native/navigation-bar": "^4.12.0",
@@ -42,6 +42,7 @@
     "cordova-sqlite-storage": "^2.4.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "json2csv": "^4.2.1",
     "papaparse": "^4.6.0",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
