--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@ionic/storage": "^2.1.3",
         "android-versions": "^1.4.0",
         "cordova-android": "^7.0.0",
+        "cordova-ios": "^4.4.0",
         "cordova-plugin-device": "^2.0.2",
         "cordova-plugin-file": "^6.0.1",
         "cordova-plugin-file-transfer": "^1.7.1",
@@ -69,7 +70,8 @@
             "cordova-plugin-file-transfer": {}
         },
         "platforms": [
-            "android"
+            "android",
+            "ios"
         ]
     }
 }
