--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
         "papaparse": "^4.6.0",
         "rxjs": "5.5.11",
         "sw-toolbox": "3.6.0",
-        "zone.js": "0.8.26"
+        "zone.js": "0.8.26",
+        "jsoneditor": "^5.28.2"
     },
     "devDependencies": {
         "@ionic/app-scripts": "3.2.0",
