--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@ionic/storage": "^2.1.3",
         "android-versions": "^1.4.0",
         "cordova-android": "^7.0.0",
+        "cordova-browser": "5.0.4",
         "cordova-ios": "^4.4.0",
         "cordova-plugin-device": "^2.0.2",
         "cordova-plugin-file": "^6.0.1",
@@ -45,14 +46,15 @@
         "ionic-angular": "3.9.2",
         "ionicons": "3.0.0",
         "json2csv": "^4.2.1",
+        "jsoneditor": "^5.28.2",
         "papaparse": "^4.6.0",
         "rxjs": "5.5.11",
         "sw-toolbox": "3.6.0",
-        "zone.js": "0.8.26",
-        "jsoneditor": "^5.28.2"
+        "zone.js": "0.8.26"
     },
     "devDependencies": {
         "@ionic/app-scripts": "3.2.0",
+        "@ionic/lab": "1.0.24",
         "typescript": "~2.6.2"
     },
     "description": "An Ionic project",
@@ -72,7 +74,8 @@
         },
         "platforms": [
             "android",
-            "ios"
+            "ios",
+            "browser"
         ]
     }
 }
