--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@ionic-native/status-bar": "^4.11.0",
         "@ionic/storage": "^2.1.3",
         "android-versions": "^1.4.0",
+        "chart.js": "^2.8.0",
         "cordova-android": "^7.0.0",
         "cordova-browser": "5.0.4",
         "cordova-ios": "^4.4.0",
@@ -47,6 +48,8 @@
         "ionicons": "3.0.0",
         "json2csv": "^4.2.1",
         "jsoneditor": "^5.28.2",
+        "ng2-charts": "^2.2.3",
+        "ng2-charts-x": "^2.0.6",
         "papaparse": "^4.6.0",
         "rxjs": "5.5.11",
         "sw-toolbox": "3.6.0",
