--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "devDependencies": {
         "@ionic/app-scripts": "3.2.0",
         "@ionic/lab": "1.0.24",
-        "typescript": "~2.6.2"
+        "typescript": "~2.6.2",
+        "@types/node": "10.3.1"
     },
     "description": "An Ionic project",
     "cordova": {
