--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
         "papaparse": "^4.6.0",
         "rxjs": "5.5.11",
         "sw-toolbox": "3.6.0",
-        "zone.js": "0.8.26"
+        "zone.js": "0.8.26",
+        "pdfmake": "^0.1.65"
     },
     "devDependencies": {
         "@ionic/app-scripts": "3.2.0",
