--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "cordova-plugin-statusbar": "^2.4.2",
         "cordova-plugin-whitelist": "^1.3.3",
         "cordova-sqlite-storage": "^2.6.0",
+        "ionic": "^3.19.0",
         "ionic-angular": "3.9.2",
         "ionicons": "3.0.0",
         "json2csv": "^4.2.1",
@@ -51,10 +52,10 @@
         "ng2-charts": "^2.2.3",
         "ng2-charts-x": "^2.0.6",
         "papaparse": "^4.6.0",
+        "pdfmake": "^0.1.65",
         "rxjs": "5.5.11",
         "sw-toolbox": "3.6.0",
-        "zone.js": "0.8.26",
-        "pdfmake": "^0.1.65"
+        "zone.js": "0.8.26"
     },
     "devDependencies": {
         "@ionic/app-scripts": "3.2.0",
