--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@angular/platform-browser-dynamic": "5.2.11",
         "@ionic-native/core": "~4.11.0",
         "@ionic-native/file": "^4.14.0",
+        "@ionic-native/file-opener": "^4.20.0",
         "@ionic-native/file-transfer": "^4.12.2",
         "@ionic-native/header-color": "^4.12.0",
         "@ionic-native/navigation-bar": "^4.12.0",
@@ -35,6 +36,8 @@
         "cordova-ios": "^4.4.0",
         "cordova-plugin-device": "^2.0.2",
         "cordova-plugin-file": "^6.0.1",
+        "cordova-plugin-file-opener": "1.0.0",
+        "cordova-plugin-file-opener2": "3.0.0",
         "cordova-plugin-file-transfer": "^1.7.1",
         "cordova-plugin-headercolor": "^1.0.0",
         "cordova-plugin-ionic-keyboard": "^2.1.3",
@@ -76,7 +79,11 @@
             "cordova-plugin-statusbar": {},
             "cordova-plugin-headercolor": {},
             "cordova-plugin-file": {},
-            "cordova-plugin-file-transfer": {}
+            "cordova-plugin-file-transfer": {},
+            "com.wmjalak.cordova.fileopener": {},
+            "cordova-plugin-file-opener2": {
+                "ANDROID_SUPPORT_V4_VERSION": "27.+"
+            }
         },
         "platforms": [
             "android",
