--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
         "@ionic/storage": "^2.1.3",
         "android-versions": "^1.4.0",
         "chart.js": "^2.8.0",
-        "cordova-android": "^7.0.0",
+        "cordova-android": "7.1.4",
         "cordova-browser": "5.0.4",
         "cordova-ios": "^4.4.0",
         "cordova-plugin-device": "^2.0.2",
@@ -86,9 +86,9 @@
             }
         },
         "platforms": [
-            "android",
             "browser",
-            "ios"
+            "ios",
+            "android"
         ]
     }
 }
