--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "@ionic/storage": "^2.1.3",
         "android-versions": "^1.4.0",
         "chart.js": "^2.8.0",
+        "cordova-android": "8.1.0",
         "cordova-browser": "5.0.4",
         "cordova-ios": "5.1.1",
         "cordova-plugin-device": "^2.0.2",
@@ -85,7 +86,8 @@
         },
         "platforms": [
             "browser",
-            "ios"
+            "ios",
+            "android"
         ]
     }
 }
