--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
         "pdfmake": "^0.1.65",
         "rxjs": "5.5.11",
         "sw-toolbox": "3.6.0",
+        "uuid": "^8.1.0",
         "zone.js": "0.8.26"
     },
     "devDependencies": {
