--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "trade-king-front-end",
+    "name": "mountmeru",
     "version": "0.0.1",
     "author": "Ionic Framework",
     "homepage": "http://ionicframework.com/",
@@ -29,10 +29,10 @@
         "@ionic-native/splash-screen": "~4.11.0",
         "@ionic-native/sqlite": "^4.20.0",
         "@ionic-native/status-bar": "^4.11.0",
-        "@ionic/storage": "^2.1.3",
+        "@ionic/storage": "2.2.0",
         "android-versions": "^1.4.0",
         "chart.js": "^2.8.0",
-        "cordova-android": "8.1.0",
+        "cordova-android": "7.1.4",
         "cordova-browser": "5.0.4",
         "cordova-ios": "5.1.1",
         "cordova-plugin-device": "^2.0.2",
