--- a/package.json
+++ b/package.json
@@ -35,19 +35,19 @@
         "cordova-android": "7.1.4",
         "cordova-browser": "5.0.4",
         "cordova-ios": "5.1.1",
-        "cordova-plugin-device": "^2.0.2",
-        "cordova-plugin-file": "^6.0.1",
+        "cordova-plugin-device": "^2.0.3",
+        "cordova-plugin-file": "^6.0.2",
         "cordova-plugin-file-opener": "1.0.0",
-        "cordova-plugin-file-opener2": "3.0.1",
+        "cordova-plugin-file-opener2": "^3.0.1",
         "cordova-plugin-file-transfer": "^1.7.1",
         "cordova-plugin-headercolor": "^1.0.0",
-        "cordova-plugin-ionic-keyboard": "^2.1.3",
-        "cordova-plugin-ionic-webview": "^2.3.1",
+        "cordova-plugin-ionic-keyboard": "^2.2.0",
+        "cordova-plugin-ionic-webview": "^2.5.3",
         "cordova-plugin-navigationbar": "^1.0.31",
-        "cordova-plugin-splashscreen": "^5.0.2",
-        "cordova-plugin-statusbar": "^2.4.2",
-        "cordova-plugin-whitelist": "^1.3.3",
-        "cordova-sqlite-storage": "5.0.0",
+        "cordova-plugin-splashscreen": "^5.0.4",
+        "cordova-plugin-statusbar": "^2.4.3",
+        "cordova-plugin-whitelist": "^1.3.4",
+        "cordova-sqlite-storage": "^5.0.0",
         "ionic": "^3.19.0",
         "ionic-angular": "3.9.2",
         "ionicons": "3.0.0",
